syntax = "proto3";

package streaming;

service StreamService {
    rpc StreamEvents(StreamRequest) returns (stream StreamResponse);
}

message StreamRequest {
    string request_id = 1;
}

message StreamResponse {
    string message = 1;
}